# qpid-proton

./: .appveyor.yml  .asf.yaml  .clang-format  .dockerignore  .gitignore  .mailmap  .reviewboardrc  .travis.yml  CMakeLists.txt  DELETEME.txt  DEVELOPERS  DEVELOPERS.md  INSTALL.md  LICENSE  LICENSE.txt  NOTICE  NOTICE.txt  README  README.md  RELEASE.md  TODO  appveyor.yml  build_for_analysis.sh  config.bat.in  config.sh  config.sh.in  cpp.cmake  go  go.mod  jenkins-proton-c-build.sh  pom.xml  prepare_for_build.sh  qpid-proton-cpp.syms  readme-branch.md  readme-go-get.md  release.sh  runtime_check.cmake  version.txt  xproton.py
c/: CMakeLists.txt  versions.cmake
c/benchmarks/: CMakeLists.txt  README.md  connection-driver.cpp  message-encoding.cpp  message-encoding_list.cpp  message-encoding_map.cpp
c/docs/: CMakeLists.txt  advanced.md  buffering.md  logging.md  threads.md  user.doxygen.in
c/examples/: CMakeLists.txt  Makefile.pkgconfig  ProtonConfig.cmake  README.md  broker.c  direct-fd.c  direct.c  example_test.py  raw_connect.c  raw_echo.c  receive.c  send-abort.c  send-fd.c  send-ssl.c  send.c  testme  thread.h
c/experimental/: README  raw_plus_tls.c  raw_plus_tls2.c
c/src/: ProtonConfig.cmake.in  encodings.h.py  libqpid-proton-core.pc.in  libqpid-proton-proactor.pc.in  libqpid-proton-tls.pc.in  libqpid-proton.pc.in  protocol.h.py  protocol.py
c/tests/: CMakeLists.txt  condition_test.cpp  connection_driver.c  connection_driver_test.cpp  data.c  data_test.cpp  engine_test.cpp  event_test.cpp  fdlimit.py  message.c  message_test.cpp  object_test.cpp  parse-url.c  pn_test.cpp  pn_test.hpp  pn_test_proactor.cpp  pn_test_proactor.hpp  pn_test_test.cpp  proactor.c  proactor_test.cpp  raw_connection_proactor_test.cpp  raw_connection_test.cpp  raw_wake_test.cpp  reactor.c  refcount.c  refcount_test.cpp  ssl_proactor_test.cpp  ssl_test.cpp  test_handler.h  test_main.cpp  test_tools.h  thread.h  threaderciser.c  threaderciser.supp  threaderciser.tsupp  tls_test.cpp  url_test.cpp  valgrind.supp
c/tools/: CMakeLists.txt  msgr-common.c  msgr-common.h  msgr-recv.c  msgr-send.c  reactor-recv.c  reactor-send.c
cpp/: CMakeLists.txt  ProtonCppConfig.cmake.in  README.md  libqpid-proton-cpp.pc.in  libqpid-proton-cpp.syms  tests.cmake  versions.cmake
cpp/benchmarks/: CMakeLists.txt  README.md  container.cpp
cpp/docs/: CMakeLists.txt  io.md  mt.md  pages.dox  tracing.dox  transactions.md  user.doxygen.in
cpp/examples/: CMakeLists.txt  Makefile.pkgconfig  ProtonCppConfig.cmake  README.dox  broker.cpp  client.cpp  colour_send.cpp  connection_options.cpp  direct_recv.cpp  direct_send.cpp  encode_decode.cpp  example_test.py  fake_cpp11.hpp  flow_control.cpp  helloworld.cpp  message_properties.cpp  multithreaded_client.cpp  multithreaded_client_0x.cpp  multithreaded_client_flow_control.cpp  multithreaded_client_flow_control_0x.cpp  options.hpp  queue_browser.cpp  reconnect_client.cpp  scheduled_send.cpp  scheduled_send_03.cpp  selected_recv.cpp  server.cpp  server_direct.cpp  service_bus.cpp  simple_connect.cpp  simple_recv.cpp  simple_send.cpp  ssl.cpp  ssl_client_cert.cpp  testme  tracing_client.cpp  tracing_demo.cpp  tracing_server.cpp  tutorial.dox  tx_interactive.cpp  (+2 more)
cpp/src/: binary.cpp  byte_array.cpp  codec_test.cpp  connect_config.cpp  connect_config.hpp  connect_config_dummy.cpp  connect_config_test.cpp  connection.cpp  connection_driver.cpp  connection_driver_test.cpp  connection_options.cpp  connection_options_impl.hpp  container.cpp  container_test.cpp  context_test.cpp  contexts.cpp  contexts.hpp  cpp-test.cpp  credit_test.cpp  data.cpp  decimal.cpp  decoder.cpp  delivery.cpp  delivery_test.cpp  duration.cpp  encoder.cpp  endpoint.cpp  error.cpp  error_condition.cpp  handler.cpp  init_tracer_stub.cpp  interop_test.cpp  link.cpp  link_namer.cpp  link_namer.hpp  link_test.cpp  listener.cpp  map.cpp  map_test.cpp  message.cpp  (+59 more)
examples/: CMakeLists.txt  ProtonConfig.cmake  ProtonCppConfig.cmake  README.md  README.txt  broker.c  brokerlib.py  exampletest.py  hole.py  send-ssl.c  util.py  widgets.py
examples/broker/: broker  brokerlib.py  example-nodes  queue.py  window.py
examples/c/: CMakeLists.txt  README.dox  broker.c  direct.c  example_test.py  receive.c  send-abort.c  send-ssl.c  send.c  thread.h
examples/cpp/: CMakeLists.txt  README.dox  README.hpp  README.md  README_dev.md  broker.cpp  broker.hpp  client.cpp  connection_options.cpp  direct_recv.cpp  direct_send.cpp  encode_decode.cpp  example_test.py  fake_cpp11.hpp  flow_control.cpp  helloworld.cpp  helloworld_blocking.cpp  helloworld_direct.cpp  message_properties.cpp  multithreaded_client.cpp  multithreaded_client_flow_control.cpp  options.hpp  queue_browser.cpp  reconnect_client.cpp  recurring_timer.cpp  scheduled_send.cpp  scheduled_send_03.cpp  select_broker.cpp  selected_recv.cpp  send_recv_mt.cpp  server.cpp  server_direct.cpp  service_bus.cpp  simple_connect.cpp  simple_recv.cpp  simple_send.cpp  ssl.cpp  ssl_client_cert.cpp  sync_client.cpp  tutorial.dox
examples/go/: CMakeLists.txt  README.md  broker.go  example.go  example_test.go  listen.go  receive.go  send.go
examples/mailbox/: README.txt  fetch  post  server  ssl-setup.sh
examples/messenger/: README.txt  client.py  recv.py  send.py  server.py
examples/perl/: recv.pl
examples/python/: README  abstract_server.py  broker.py  client.py  colour_send.py  (+26 more)
go/: CMakeLists.txt  README.md  genwrap.go
proton-c/: .gitignore  CMakeLists.txt  Makefile  README  TODO  cproton.i  env.py  musings.txt  pn_config.h.in  proton.i  soversion.cmake  tox.ini.in  versions.cmake
python/: CMakeLists.txt  MANIFEST.in  PACKAGING.txt  README.rst  _proton_cffi.py  cffi_c_headers_reader.py  ci_requirements.txt  cproton.h  cproton.i  cproton.py  cproton_ext.c  ext_build.py  ext_build_devtree.py  ext_build_unbundled.py  proton_cffi_builder.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.py.in  tox.ini  tox.ini.in
python3/: CMakeLists.txt  generate_binding_code.py
ruby/: .yardopts  CMakeLists.txt  README.rdoc  cproton.i  qpid_proton.gemspec.in
(+4202 files in other folders)
